# mad-esp32p4_ass-pain_edition

./: .gitignore  CMakeLists.txt  README.md  deploy.ps1  deploy.sh  partitions.csv  partitions_ota_16mb.csv  sdkconfig  sdkconfig.defaults  setup.ps1  setup.sh
components/jc4880p443c/: CMakeLists.txt  idf_component.yml  jc4880p443c.c
components/jc4880p443c/include/: jc4880p443c.h
main/: CMakeLists.txt  Kconfig.projbuild  demo_backlight.h  display_direct_timing.c  display_direct_timing.h  display_experiments.c  display_experiments.h  eez_ui_port.c  eez_ui_port.h  eez_ui_runtime.c  eez_ui_runtime.h  idf_component.yml  jc4880p443c_demo.c  p4_project_config.h  stm32_swd_programmer.c  stm32_swd_programmer.h  ui_background_direct.c  ui_background_direct.h  wifi_manager.h  wifi_manager_esp32c6_at.c  wifi_manager_esp32c6_hosted.c  wifi_manager_esp32c6_service.c  wifi_manager_stub.c
main/src/ui/: actions.h  images.c  images.h  screens.c  screens.h  ui_image_art_deco_2.c  ui_image_frank_1.c  ui_image_helix_nabula_1.c  ui_image_lawson_1.c  ui_image_lawson_2.c  ui_image_lil_2.c  ui_image_lil_4.c  ui_image_miriam_1.c  ui_image_new_lil_2.c  ui_image_piter_veber_2.c  ui_image_piter_veber_3.c  ui_image_upload_1.c  ui_image_veber_1.c  ui_image_veber_and_feirbach_1.c
main/update/: update_manager.c  update_manager.h
